--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,9 @@
 }
 
 body {
-    background: url(../images/enterprise-cloud-building-blocks.jpg);
+    background: url(../images/geyser.jpg) no-repeat center center fixed;
+    ;
+    background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     font-size: 18px;
@@ -156,7 +158,7 @@ h2,
 /*footer*/
 
 footer {
-    background: #666;
+    background: #6aa0dd;
     color: #fff;
     padding: 30px 0;
     clear: both;
@@ -235,7 +237,7 @@ textarea {
 }
 
 input[type=submit] {
-    background: #4aaaa5;
+    background: #2e7dc7;
     border: 0 none;
     color: #fff;
     font-size: 18px;
